[gd_scene load_steps=6 format=3 uid="uid://dk43158ti5kq2"]

[ext_resource type="Script" path="res://scenes/shop/shop.gd" id="1_cxwj3"]
[ext_resource type="PackedScene" uid="uid://8qtr1v08wxfm" path="res://scenes/shop/shop_item.tscn" id="1_epao8"]
[ext_resource type="AudioStream" uid="uid://bp4y1gh3q06pn" path="res://assets/sfx/buy.mp3" id="3_0seam"]
[ext_resource type="Texture2D" uid="uid://24gudywpc1gv" path="res://assets/art/machine/refresh.png" id="3_4hi10"]
[ext_resource type="AudioStream" uid="uid://dpgolpgyla4ii" path="res://assets/sfx/refresh.mp3" id="4_m13ed"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_cxwj3")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="ShopItem1" parent="CenterContainer/HBoxContainer" instance=ExtResource("1_epao8")]
layout_mode = 2

[node name="ShopItem2" parent="CenterContainer/HBoxContainer" instance=ExtResource("1_epao8")]
layout_mode = 2

[node name="ShopItem3" parent="CenterContainer/HBoxContainer" instance=ExtResource("1_epao8")]
layout_mode = 2

[node name="ShopItem4" parent="CenterContainer/HBoxContainer" instance=ExtResource("1_epao8")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="CenterContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
color = Color(0.136826, 0.136826, 0.136826, 0.486275)

[node name="MoneyLabel" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer/ColorRect"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
offset_left = 2.0
offset_top = -6.0
offset_right = 142.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
vertical_alignment = 1

[node name="RefreshButton" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 120)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer/VBoxContainer/RefreshButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_4hi10")
stretch_mode = 3

[node name="BuyAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0seam")
max_polyphony = 8

[node name="RefreshAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_m13ed")
volume_db = -10.0
